fix: change margin-bottom for footer-wraper

--- a/portfolio/styles/styles.css
+++ b/portfolio/styles/styles.css
@@ -689,7 +689,7 @@ svg:hover {
     gap: 5px;
   }
   div.footer-wraper {
-    margin: 21px 0 45px 0;
+    margin: 21px 0 25px 0;
   }
   div.block3 {
     margin-top: 18px;
